implemented front-end for create
